[gd_scene load_steps=20 format=2]

[ext_resource path="res://players/knight/sprites/knight.png" type="Texture" id=1]
[ext_resource path="res://players/knight/Knight_script.gd" type="Script" id=2]
[ext_resource path="res://UI/hp_bar/sprites/hp_background.png" type="Texture" id=3]
[ext_resource path="res://UI/hp_bar/sprites/hp_health.png" type="Texture" id=4]
[ext_resource path="res://traps/spikes/Health.gd" type="Script" id=5]
[ext_resource path="res://UI/tent/buttons/turn_left_vanish14.png" type="Texture" id=6]
[ext_resource path="res://players/archer/sprite/invis_button.png" type="Texture" id=7]
[ext_resource path="res://UI/HUD/move_to_buttons/target.gd" type="Script" id=8]
[ext_resource path="res://players/archer/sprite/target.png" type="Texture" id=9]
[ext_resource path="res://players/knightwalking.tres" type="Animation" id=10]

[sub_resource type="Animation" id=6]
resource_name = "Attacking"
length = 0.644
loop = true
step = 0.012
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.24, 0.455 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=1]
length = 0.457
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 3.13834, 65.4157, 7.46426, 3.36358 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "enter"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walking_Up"
length = 0.706
loop = true
step = 0.026
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.156, 0.338, 0.546 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.026, 0.156, 0.338, 0.546 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walking_down"
length = 0.701
loop = true
step = 0.023
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.046, 0.207, 0.414, 0.575 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 43, 44, 45, 46 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.023, 0.161, 0.322, 0.483, 0.644 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46 ]
}

[sub_resource type="Animation" id=10]
resource_name = "walking_right"
length = 0.63
loop = true
step = 0.002
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.178, 0.358, 0.53 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 1, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.636 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.83766
height = 3.62127

[sub_resource type="CapsuleShape2D" id=5]
radius = 48.8637
height = 94.2371

[sub_resource type="CircleShape2D" id=7]

[node name="KinematicBody2D" type="KinematicBody2D" groups=["Knight"]]
scale = Vector2( 0.573023, 0.573023 )
collision_layer = 514
collision_mask = 521
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
reset_on_save = false
anims/Attacking = SubResource( 6 )
anims/RESET = SubResource( 1 )
anims/enter = SubResource( 4 )
anims/walking = ExtResource( 10 )
anims/walking_Up = SubResource( 8 )
anims/walking_down = SubResource( 9 )
anims/walking_right = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 6.52, 6.509 )
texture = ExtResource( 1 )
hframes = 14
vframes = 11
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.23539, 90.7468 )
rotation = 1.57745
scale = Vector2( 8.30135, 8.30135 )
shape = SubResource( 3 )

[node name="knight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="knight"]
position = Vector2( -3.49026, 12.2159 )
shape = SubResource( 5 )

[node name="Damage_Tick" type="Timer" parent="."]
wait_time = 0.25

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.427451 )
margin_left = 12.8439
margin_top = -15.5964
margin_right = 52.8439
margin_bottom = 24.4036
rect_scale = Vector2( -0.239088, 0.27467 )
script = ExtResource( 5 )

[node name="TextureProgress" type="TextureProgress" parent="Control"]
margin_left = 316.488
margin_top = -349.845
margin_right = 444.488
margin_bottom = -317.845
rect_scale = Vector2( -3.08193, 3.0668 )
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.0352941, 1, 0.0352941, 1 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -47.1186, -102.963 )
scale = Vector2( 0.488637, 0.767857 )
normal = ExtResource( 6 )

[node name="target" type="Node2D" parent="."]
z_index = 164
script = ExtResource( 8 )

[node name="Top_button" type="TouchScreenButton" parent="target"]
position = Vector2( -55.8442, -108.198 )
scale = Vector2( 4.03561, 6.83804 )
normal = ExtResource( 7 )

[node name="target" type="Sprite" parent="target"]
visible = false
position = Vector2( 724.229, 22.6867 )
scale = Vector2( 5.4719, 4.7084 )
z_index = 49
texture = ExtResource( 9 )

[node name="Troup_Area" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Troup_Area"]
position = Vector2( -1.96071, 10.7839 )
scale = Vector2( -11.7399, -13.6439 )
shape = SubResource( 7 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 15.77
path_max_distance = 10.0

[node name="Hit_timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Damage_Tick" to="." method="_on_Damage_Tick_timeout"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="pressed" from="target/Top_button" to="target" method="_on_Top_button_pressed"]
[connection signal="area_entered" from="Troup_Area" to="." method="_on_Troup_Area_area_entered"]
[connection signal="area_exited" from="Troup_Area" to="." method="_on_Troup_Area_area_exited"]
[connection signal="timeout" from="Hit_timer" to="." method="_on_Hit_timer_timeout"]
